Closed
Bug 190283
Opened 23 years ago
Closed 23 years ago
Unicode escaped characters don't work in .properties
Categories
(Core :: XPCOM, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla1.4alpha
People
(Reporter: kairo, Assigned: alecf)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
1.61 KB,
patch
|
jst
:
review+
jst
:
superreview+
bzbarsky
:
superreview+
asa
:
approval1.3b+
|
Details | Diff | Splinter Review |
In localized language packs, we escape charaters all over using 4-character
unicode values, and this seems not to work with current builds, I guess it
regessed with the checkin to bug 121341.
This basically means that lots of strings in my localized build don't work
currently, e.g. in Page Info / Security I get
"Die Website bugzilla.mozilla.org unterst00Ftzt keine Verschlsselung fr die
Seite, die Sie ansehen."
instead of
"Die Website bugzilla.mozilla.org unterstützt keine Verschlüsselung für die
Seite, die Sie ansehen."
The line in pippki.properties is as following (just to help to detect the error):
pageInfo_Privacy_None1=Die Website %S unterst\u00FCtzt keine
Verschl\u00FCsselung f\u00FCr die Seite, die Sie ansehen.
It's three times the same character here, I have other strings with other
escaped characters as well, and most times they're just left out, as here in two
of the three cases.
| Assignee | ||
Comment 1•23 years ago
|
||
hmm.. they worked in my testing.. are you sure you aren't seeing bug 190256?
| Assignee | ||
Comment 2•23 years ago
|
||
argh, I spoke to soon. My 'testing' was following it in the debugger, to make
sure the unicode value was parsed correctly.. which it was.. the only problem
was that it never did the final step of appending it to the string.
here's the fix.
| Assignee | ||
Comment 3•23 years ago
|
||
Comment on attachment 112418 [details] [diff] [review]
actually append the unicode value
Looking for reviews. Basically I moved the detection of the 4th quartet to the
point after it has been appended. at that point, we append the value.
the trick was recovering from errors.. we don't actually try that hard, but
append the unicode character fragment that we do encounter.
jag/jst do you mind reviewing?
Attachment #112418 -
Flags: superreview?(jst)
Attachment #112418 -
Flags: review?(jaggernaut)
Updated•23 years ago
|
Attachment #112418 -
Flags: superreview+
| Reporter | ||
Updated•23 years ago
|
Flags: blocking1.3b?
Comment 4•23 years ago
|
||
Comment on attachment 112418 [details] [diff] [review]
actually append the unicode value
r/sr=jst
Attachment #112418 -
Flags: superreview?(jst)
Attachment #112418 -
Flags: review?(jaggernaut)
Attachment #112418 -
Flags: review+
| Assignee | ||
Comment 5•23 years ago
|
||
Comment on attachment 112418 [details] [diff] [review]
actually append the unicode value
asking for 1.3b approval now
Attachment #112418 -
Flags: approval1.3b?
Comment 6•23 years ago
|
||
Comment on attachment 112418 [details] [diff] [review]
actually append the unicode value
a=asa (on behalf of drivers) for checkin to 1.3beta.
Attachment #112418 -
Flags: approval1.3b? → approval1.3b+
Flags: blocking1.3b? → blocking1.3b+
Comment 7•23 years ago
|
||
Checkins to module MozillaTinderboxAll by alecf%netscape.com between 01/25/2003
14:12 and 01/25/2003 14:16 :
fix for bug 190283 - save unicode values stored like \u4ea2 after decoding them.
r=jst, sr=bzbarsky, a=asa
Shouldn't this be marked fixed?
Comment 8•23 years ago
|
||
Sure, once the bug owner decides to. Notice that it's not even cycled on some of
the tinderboxes yet (eg AIX). And that alecf may want confirmation from people
actually testing the builds with the patch. Or that he may just be out to lunch
on a Saturday afternoon.
| Reporter | ||
Comment 9•23 years ago
|
||
The basic thing here works now, thanks.
I still see a problem here (only in this one string though):
pageInfo_Privacy_None1=Die Website %S unterst\u00FCtzt keine
Verschl\u00FCsselung f\u00FCr die Seite, die Sie ansehen.
is now displayed as
"Die Website bugzilla.mozilla.org unterst00ützt keine Verschlüsselung für die
Seite, die Sie ansehen."
You might notice that when I posted the bug, I got raw "00F", I got only raw
"00" in the last days, now I get this raw "00" plus the (correct) character "ü"
displayed here - looks quite strange to me...
| Assignee | ||
Comment 10•23 years ago
|
||
that is odd! you said you're only seeing it with that string - does that mean
other strings are working? is it only ones that begin with '\u00..'? i'll
investigate this more as well, but I'd love to hear more details
| Reporter | ||
Comment 11•23 years ago
|
||
alecf:
I haven't found any other strings yet where this is happening for me, but it's
very reproducible with this one. A very strange thing, that's true...
I'm only using '\u00..' characters, German doesn't have any other characters
that have to be encoded...
| Assignee | ||
Comment 13•23 years ago
|
||
I'm going to be poking at this soon.. hopefully in time for 1.3beta... I'd like
to hear if anyone else has special strings that wont decode.
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla1.3beta
Comment 14•23 years ago
|
||
*** Bug 191693 has been marked as a duplicate of this bug. ***
Comment 15•23 years ago
|
||
Unfortunately, this regression breaks the processing of unicode characters in
unexpected ways. See duplicate bug 191693 which clearly shows that things go
awry in the handling of unicode sequences.
Re-requesting the evaluation of drivers, even for the opportunity of a
last-minute back-out. I see that alecf has already given P1 to this bug. While
awaiting a fix, it would be good if drivers could allow room for a last-minute
fallback option, pending further investigation of the remaining issues.
Flags: blocking1.3b- → blocking1.3b?
OS: Linux → All
| Assignee | ||
Comment 16•23 years ago
|
||
yeah, I'm wondering if I should just backount my entire .properties optimization
and make another run at it in 1.4. This patch has already landed in the current
1.3b, but it sounds like we're STILL seeing problems...
Comment 17•23 years ago
|
||
Clearing flags since alecf has backed out his optimization.
Flags: blocking1.3b?
| Assignee | ||
Comment 18•23 years ago
|
||
ok, I backed out the original optimization, so this bug is working now.. but I'm
going to re-land it in 1.4alpha so I can test this string again.
Target Milestone: mozilla1.3beta → mozilla1.4alpha
Comment 19•23 years ago
|
||
I wonder if it is worth the trouble. I didn't see much changes in the Tinderbox
timings after the back-out. It was as if the optimization wasn't perceptible.
| Assignee | ||
Comment 20•23 years ago
|
||
argh, so this is actually fixed, since I backed out my whole checkin... we'll
reopen if I reland, and this problem is still appearent.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•