fix for bug 190283 - save unicode values stored like \u4ea2 after decoding them. r=jst, sr=bzbarsky, a=asa